# Stroustrup2014_PPP2

./: .gitignore  CMakeLists.txt
drills/: CMakeLists.txt
drills/ch2_hello_world/: CMakeLists.txt  drill1_hello_world.cpp
drills/ch3_objects_types_values/: CMakeLists.txt  drill_letter_writer.cpp
drills/ch4_computation/: CMakeLists.txt  drill_steps1to5.cpp  drill_steps5to11.cpp  std_lib_facilities.h
drills/ch6_writing_a_program/: CMakeLists.txt  calculator02buggy.cpp  calculator02fixed.cpp  calculator02fixed2.cpp
examples/: CMakeLists.txt
examples/ch12_a_display_model/: CMakeLists.txt
examples/ch2_hello_world/: CMakeLists.txt  std_lib_facilities.h
examples/ch3_objects_types_values/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp
examples/ch4_computation/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp
examples/ch6_writing_a_program/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
examples/ch7_completing_a_program/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp
exercises/: CMakeLists.txt
exercises/ch3_objects_types_values/: CMakeLists.txt  exercise_03.cpp  exercise_04.cpp  exercise_05.cpp  exercise_06.cpp  exercise_07.cpp
exercises/ch9_technicalities_classes/: CMakeLists.txt  exercise_01.cpp
