# Chapter 3.

# Section 3.1: Input.
add_executable(ch3_ex1 std_lib_facilities.h ex1.cpp)

# Section 3.2: Variables.

# Section 3.3: Input and type.
add_executable(ch3_ex2 std_lib_facilities.h ex2.cpp)
add_executable(ch3_ex3 std_lib_facilities.h ex3.cpp)
add_executable(ch3_ex4 std_lib_facilities.h ex4.cpp)

# Section 3.4: Operations and operators.
add_executable(ch3_ex5 std_lib_facilities.h ex5.cpp)
add_executable(ch3_ex6 std_lib_facilities.h ex6.cpp)
add_executable(ch3_ex7 std_lib_facilities.h ex7.cpp)