# Chapter 4. Computation.

# Section 4.1: Computation.
# Section 4.2: Objectives and tools.
# Section 4.3: Expressions.
add_executable(ch4_ex1 std_lib_facilities.h ex1.cpp)

# Section 4.4: Statements.
add_executable(ch4_ex2 std_lib_facilities.h ex2.cpp) # if-statement
add_executable(ch4_ex3 std_lib_facilities.h ex3.cpp) # switch-statement
add_executable(ch4_ex4 std_lib_facilities.h ex4.cpp) # while-loop, for-loop

# Section 4.5 Functions.
add_executable(ch4_ex5 std_lib_facilities.h ex5.cpp)



