# Chapter 6. Writing a Program.

# Section 6.3.1: First attempt (at calculator program).
add_executable(ch6_ex1 std_lib_facilities.h ex1.cpp)
add_executable(ch6_ex2 std_lib_facilities.h ex2.cpp)

# Sections 6.3.2: Implementing tokens & 6.3.4: Using tokens.
add_executable(ch6_ex3 std_lib_facilities.h ex3.cpp)