# Chapter 6. Writing a Program.

# Section 6.1: A problem.
# Section 6.2: Thinking about the problem.

# Section 6.3: Back to the calculator!
# Section 6.3.1: First attempt (at calculator program).
add_executable(ch6_ex1 std_lib_facilities.h ex1.cpp)
add_executable(ch6_ex2 std_lib_facilities.h ex2.cpp)
# Sections 6.3.2: Implementing tokens & 6.3.4: Using tokens.
add_executable(ch6_ex3 std_lib_facilities.h ex3.cpp)

# Section 6.4: Grammars.

# Sections 6.5 Turning a grammer into code.
#          6.6 Trying the first version.
add_executable(ch6_ex4 std_lib_facilities.h ex4.cpp)

# Sections 6.7 Trying the second version.
#          6.8 Token streams.
#          6.9 Program structure.
add_executable(ch6_ex5 std_lib_facilities.h ex5.cpp)
