# Chapter 7. Completing a Program.

# Section 7.1: Introduction.
# Section 7.2: Input and output.
add_executable(ch7_ex1 std_lib_facilities.h ex1.cpp)

# Section 7.3: Error handling.
add_executable(ch7_ex2 std_lib_facilities.h ex2.cpp)

# Section 7.4: Negative numbers.
add_executable(ch7_ex3 std_lib_facilities.h ex3.cpp)

# Section 7.5: Remainder %.
add_executable(ch7_ex4 std_lib_facilities.h ex4.cpp)

# Section 7.6: Cleaning up the code.
add_executable(ch7_ex5 std_lib_facilities.h ex5.cpp)

# Section 7.7: Recovering from errors.
add_executable(ch7_ex6 std_lib_facilities.h ex6.cpp)

# Section 7.8: Variables.
add_executable(ch7_ex7 std_lib_facilities.h ex7.cpp)

